# Hyperion

./: .gitignore  CMakeLists(old).txt  CMakeLists.txt  README.md  requirements.txt  train.slurm
src/cpp/: main.cpp
src/cpp/core/: constants.hpp  move.hpp  perft.cpp  test_puzzle.cpp
src/cpp/nn_inference/: nn_inference.cpp  nn_inference.hpp
src/cpp/search/: eval.cpp  move_encoder.cpp  move_encoder.hpp  search.cpp  search.hpp  tt.cpp
src/cpp/uci/: engine.hpp
src/python/hyperion_nn/: config.py  export.py
src/python/hyperion_nn/data_utils/: plot_loss.py  plot_validation_distribution.py
src/python/hyperion_nn/training/: train.py
